<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:fitsSystemWindows="true"
        tools:context=".activities.LoginActivity">

    <!-- Login Progress -->
    <ProgressBar
            android:id="@+id/login_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <ScrollView
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <ImageView
                    android:id="@+id/imageView"
                    android:layout_gravity="center"
                    android:src="@drawable/capital_social_logo"
                    android:layout_marginTop="@dimen/activity_top_general"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_width="200dp"
                    android:layout_height="100dp"/>

            <Button
                    android:id="@+id/email_scan_button"
                    android:layout_marginBottom="@dimen/activity_horizontal_margin"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:text="@string/action_scan_qr"
                    android:textStyle="normal"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    app:layout_constraintTop_toBottomOf="@id/imageView"
                    android:background="@color/colorAccent"
                    android:elevation="@dimen/activity_horizontal_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:text="@string/message_title"
                    android:id="@+id/welcomeTitle"
                    app:layout_constraintTop_toBottomOf="@id/email_scan_button" />

            <LinearLayout
                    android:id="@+id/linear_user"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    app:layout_constraintTop_toBottomOf="@id/welcomeTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginStart="@dimen/activity_horizontal_margin"
                        android:layout_marginEnd="@dimen/activity_horizontal_margin"
                        android:src="@drawable/icono_usuario"
                        android:gravity="center"
                        android:textSize="@dimen/general_text"/>
                <EditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_email"
                        android:inputType="textEmailAddress"
                        android:layout_marginEnd="@dimen/activity_horizontal_margin"
                        android:padding="@dimen/activity_horizontal_margin"
                        android:maxLines="1"
                        android:singleLine="true"/>
            </LinearLayout>

            <LinearLayout
                    android:id="@+id/linear_password"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    app:layout_constraintTop_toBottomOf="@id/linear_user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginStart="@dimen/activity_horizontal_margin"
                        android:layout_marginEnd="@dimen/activity_horizontal_margin"
                        android:src="@drawable/icono_usuario"
                        android:gravity="center"
                        android:textSize="@dimen/general_text"/>
                <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_password"
                        android:inputType="textPassword"
                        android:layout_marginEnd="@dimen/activity_horizontal_margin"
                        android:padding="@dimen/activity_horizontal_margin"
                        android:maxLines="1"
                        android:singleLine="true"/>
            </LinearLayout>

            <Button
                    android:id="@+id/email_login_button"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="@dimen/activity_horizontal_margin"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:text="@string/action_sign_in"
                    android:textStyle="normal"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    app:layout_constraintTop_toBottomOf="@id/linear_password"
                    android:background="@color/colorAccent"
                    android:elevation="@dimen/activity_horizontal_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            <Button
                    android:id="@+id/email_register_button"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="@dimen/activity_horizontal_margin"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:text="@string/do_not_have_account"
                    android:textStyle="normal"
                    android:textSize="18sp"
                    android:textColor="@color/colorAccent"
                    app:layout_constraintTop_toBottomOf="@id/email_login_button"
                    android:background="@drawable/button_login_white"
                    android:elevation="@dimen/activity_horizontal_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/reset_password"
                    android:gravity="center"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/general_text"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:id="@+id/reset_password"
                    app:layout_constraintTop_toBottomOf="@id/email_register_button"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</LinearLayout>